fix(contentstatus): fixed contentStatus column's alignement

--- a/frontend_lib/src/TracimTableLib/Columns/content/contentStatusColumn.styl
+++ b/frontend_lib/src/TracimTableLib/Columns/content/contentStatusColumn.styl
@@ -7,6 +7,10 @@
     display flex
     & > *
       font-size metadataFontSize
+    & > span
+      align-items center
+      display flex
+
 
 @media (max-width: max-md)
   .contentStatusColumn
